src/test/ui/const-generics/issues/issue-83249.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-83249.rs:19:13
   |
LL |     let _ = foo([0; 1]);
   |         -   ^^^ cannot infer type for type parameter `T` declared on the function `foo`
   |         |
   |         consider giving this pattern a type
   |
help: type parameter declared here
  --> $DIR/issue-83249.rs:12:8
   |
LL | fn foo<T: Foo>(_: [u8; T::N]) -> T {
   |        ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
